# Ai-BLE_exmple

./: README.md
Ai-M6x_salve_UUID/: CMakeLists.txt  flash_prog_cfg.ini
Ai-M6x_salve_UUID/components/BLE/: ble_interface.c
Ai-M6x_salve_adv/: Makefile  flash_prog_cfg.ini  proj.conf
Ai-M6x_salve_adv/components/BLE/: ble_interface.c
Ai-M6x_salve_adv/main/: main.c
Ai-M6x_salve_rsp/: flash_prog_cfg.ini
Ai-M6x_salve_rsp/components/BLE/: ble_interface.c
Ai-M6x_salve_status/: flash_prog_cfg.ini
Ai-M6x_salve_status/components/BLE/: ble_interface.c
Ai-M6x_salve_write_read/: flash_prog_cfg.ini
Ai-M6x_salve_write_read/components/BLE/: ble_interface.c  ble_interface.h
